Display "cracked" results on "case details"
In line with designs

Notes:

1. Safe navigation for hearing object
    Swallow view errors for a nonexistent object
    Although we hope that every hearing summary
    id has a matching hearing with the same id
    but this does not appear to be the case from
    production data and sentry errors we have seen.

2. Rely on the prosecution_case hearings rather than
    the summary. The dates that exist on the summary
    are also available on the hearing directly now
    so this is a general refactor that could be applied
    elsewhere as we may not need the hearing summary
    at all now (TBC).

--- a/app/views/prosecution_cases/show.html.haml
+++ b/app/views/prosecution_cases/show.html.haml
@@ -1,5 +1,7 @@
 = govuk_page_title(@prosecution_case.prosecution_case_reference, t('generic.case'))
 
+= render partial: 'cracked_ineffective_trial', locals: { results: @results }
+
 %h2.govuk-heading-m
   = t('search.result.defendant.heading')
 %table.govuk-table
@@ -33,8 +35,9 @@
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.providers')
   %tbody.govuk-table__body
     - @results.each do |prosecution_case|
-      - prosecution_case.hearing_summaries.each do |hearing_summary|
-        - hearing_summary.hearing_days.each do |hearing_day|
+      - prosecution_case.hearing_summaries.sort_by{ |summary| summary.hearing_days }.each do |hearing_summary|
+        - hearing = prosecution_case.hearings.find { |h| h.id == hearing_summary.id}
+        - hearing_summary.hearing_days.map(&:to_date).sort.each do |hearing_day|
           %tr.govuk-table__row
             %td.govuk-table__cell
               = link_to hearing_day.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing_summary.id, urn: prosecution_case.prosecution_case_reference)
@@ -42,6 +45,7 @@
               = hearing_summary.hearing_type
             %td.govuk-table__cell
               = hearing ? decorate(hearing).provider_list : t('generic.not_available')
+
 
 - if Rails.configuration.x.display_raw_responses
   = render partial: 'raw_response'
