Move raw responses to partials
Declutter the view. Also use GDS stlye whitespace padding for
responsiveness and move content to translations

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -66,12 +66,4 @@
           = event.description
 
 - if Rails.configuration.x.display_raw_responses
-  %br
-  %br
-  = govuk_detail('View raw data') do
-    %h3='Hearings'
-    %pre
-      = JSON.pretty_generate(@hearing&.attributes)
-    %h3='Hearing events'
-    %pre
-      = JSON.pretty_generate(@hearing&.hearing_events&.map(&:attributes))
+  = render partial: 'raw_response', locals: { hearing: hearing }
