--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -42,7 +42,7 @@
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.prosecution')
       %td.govuk-table__cell
-        = hearing&.prosecution_advocate_names&.join(', ') || t('generic.not_available')
+        = safe_join(hearing&.prosecution_advocate_names, tag.br) || t('generic.not_available')
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.judges')
