Add prosecution_advocate_name_list decorator method and use
To wrap prosecution_advocate_namea method of the resource
object for view presentation purposes. Keep views
succint

--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -42,7 +42,7 @@
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.prosecution')
       %td.govuk-table__cell
-        = safe_join(hearing&.prosecution_advocate_names, tag.br) || t('generic.not_available')
+        = hearing.prosecution_advocate_name_list
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
         = t('hearings.show.attendees.judges')
