--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -13,3 +13,4 @@ $govuk-image-url-function: frontend-image-url;
 @import "components/cookie_banner";
 @import "components/forms";
 @import "components/summary";
+@import "components/typography";
