--- a/app/views/prosecution_cases/_cracked_ineffective_trial.html.haml
+++ b/app/views/prosecution_cases/_cracked_ineffective_trial.html.haml
@@ -1,17 +1,19 @@
 - results.each do |prosecution_case|
-  - prosecution_case.hearings.each do |hearing|
-    - decorate(hearing.cracked_ineffective_trial) do |cracked_ineffective_trial|
-      - if cracked_ineffective_trial.cracked?
-        %table.govuk-table
-          %caption.govuk-table__caption.govuk-visually-hidden
-            = t('prosecution_case.show.cracked_ineffective_trial.caption')
-          %tbody.govuk-table__body
-            %tr.govuk-table__row
-              %th.govuk-table__header{ scope: 'row' }
-                = t('prosecution_case.show.cracked_ineffective_trial.heading')
-              %td.govuk-table__cell
-                - hearing_link = link_to hearing.hearing_days.first.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference)
-
-                = cracked_ineffective_trial.type_sentence(hearing_link)
-                %br
-                = cracked_ineffective_trial.description
+  / TODO: decorate cracked_ineffective_trial objects as part of hearing?!
+  - if prosecution_case.hearings.map{ |h| decorate(h.cracked_ineffective_trial)&.cracked? }.any?
+    %table.govuk-table
+      %caption.govuk-table__caption.govuk-visually-hidden
+        = t('prosecution_case.show.cracked_ineffective_trial.caption')
+      %tbody.govuk-table__body
+        %tr.govuk-table__row
+          %th.govuk-table__header{ scope: 'row' }
+            = t('prosecution_case.show.cracked_ineffective_trial.heading')
+          %td.govuk-table__cell
+            - prosecution_case.hearings.each do |hearing|
+              - decorate(hearing.cracked_ineffective_trial) do |cracked_ineffective_trial|
+                - if cracked_ineffective_trial.cracked?
+                  / TODO: just sending objects to decorator method as params object?!
+                  - hearing_link = link_to hearing.hearing_days.first.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference)
+                  = cracked_ineffective_trial.type_sentence(hearing_link)
+                  %br
+                  = cracked_ineffective_trial.description
