--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -26,8 +26,7 @@
         %th.govuk-table__header{ scope: 'row' }
           = t('hearings.show.result')
         %td.govuk-table__cell
-          / # TODO: decorate cracked_ineffective_trial as part of hearing decoration?!
-          = decorate(hearing.cracked_ineffective_trial).description_sentence
+          = hearing.cracked_ineffective_trial.description_sentence
 
 %h2.govuk-heading-m
   = t('hearings.show.attendees.heading')
