--- a/app/views/prosecution_cases/_cracked_ineffective_trial.html.haml
+++ b/app/views/prosecution_cases/_cracked_ineffective_trial.html.haml
@@ -11,8 +11,6 @@
           %td.govuk-table__cell
             - prosecution_case.hearings.each do |hearing|
               - if hearing.cracked_ineffective_trial.cracked?
-                / TODO: just sending objects to decorator method as params object?!
-                - hearing_link = link_to hearing.hearing_days.first.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference)
-                = hearing.cracked_ineffective_trial.type_sentence(hearing_link)
+                = hearing.cracked_ineffective_trial.cracked_on_sentence(hearing, prosecution_case)
                 %br
                 = hearing.cracked_ineffective_trial.description
