--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -9,8 +9,8 @@
 $govuk-font-url-function: frontend-font-url;
 $govuk-image-url-function: frontend-image-url;
 @import "~govuk-frontend/govuk/all";
+@import "core/typography";
 
 @import "components/cookie_banner";
 @import "components/forms";
 @import "components/summary";
-@import "components/typography";
