Rename vcd-body-secondary css app-body-secondary

--- a/app/views/defendants/_offences.html.haml
+++ b/app/views/defendants/_offences.html.haml
@@ -14,7 +14,7 @@
       %tr.govuk-table__row
         %td.govuk-table__cell
           = offence.title || t('generic.not_available')
-          %span.vcd-body-secondary
+          %span.app-body-secondary
             = offence.legislation || t('generic.not_available')
         %td.govuk-table__cell
           = offence.plea_list
