--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -56,21 +56,7 @@
       %td.govuk-table__cell
         = hearing.judge_name_list
 
-%table.govuk-table
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('hearings.show.events.caption')
-  %thead.govuk-table__head
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'col' }= t('hearings.show.events.time')
-      %th.govuk-table__header{ scope: 'col' }= t('hearings.show.events.event')
-  %tbody.govuk-table__body
-    - hearing_events_for_day = hearing&.hearing_events&.select { |event| event.occurred_at.to_date.eql?(@hearing_day) }
-    - hearing_events_for_day&.sort { |a,b| a.occurred_at <=> b.occurred_at }&.each do |event|
-      %tr.govuk-table__row
-        %td.govuk-table__cell
-          = event.occurred_at.to_datetime.strftime('%H:%M')
-        %td.govuk-table__cell
-          = event.description
+= render partial: 'hearing_events', locals: { hearing: hearing, hearing_day: @hearing_day }
 
 - if Rails.configuration.x.display_raw_responses
   = render partial: 'raw_response', locals: { hearing: hearing }
