--- a/app/views/hearings/show.html.haml
+++ b/app/views/hearings/show.html.haml
@@ -28,33 +28,7 @@
         %td.govuk-table__cell
           = hearing.cracked_ineffective_trial.description_sentence
 
-%h2.govuk-heading-m
-  = t('hearings.show.attendees.heading')
-
-%table.govuk-table
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('hearings.show.attendees.caption')
-  %tbody.govuk-table__body
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.defendants')
-      %td.govuk-table__cell
-        = hearing.defendant_name_list
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.defence')
-      %td.govuk-table__cell
-        = hearing.provider_list
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.prosecution')
-      %td.govuk-table__cell
-        = hearing.prosecution_advocate_name_list
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'row' }
-        = t('hearings.show.attendees.judges')
-      %td.govuk-table__cell
-        = hearing.judge_name_list
+= render partial: 'attendees', locals: { hearing: hearing }
 
 = render partial: 'hearing_events', locals: { hearing: hearing, hearing_day: @hearing_day }
 
