--- a/app/views/prosecution_cases/show.html.haml
+++ b/app/views/prosecution_cases/show.html.haml
@@ -2,29 +2,9 @@
 
 = render partial: 'cracked_ineffective_trial', locals: { results: @results }
 
-%h2.govuk-heading-m
-  = t('search.result.defendant.heading')
-%table.govuk-table
-  %caption.govuk-table__caption.govuk-visually-hidden
-    = t('search.result.defendant.caption')
-  %thead.govuk-table__head
-    %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.name')
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.date_of_birth')
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.maat_number')
-  %tbody.govuk-table__body
-    - @results.each do |prosecution_case|
-      - prosecution_case.defendants.each do |defendant|
-        %tr.govuk-table__row
-          %td.govuk-table__cell
-            = link_to defendant.name, defendant_link_path(defendant, @prosecution_case.prosecution_case_reference)
-          %td.govuk-table__cell
-            = l(defendant.date_of_birth&.to_date)
-          %td.govuk-table__cell
-            = defendant.maat_reference || t('search.result.defendant.unlinked')
+= render partial: 'defendants', locals: { results: @results , prosecution_case: @prosecution_case}
 
 = render partial: 'hearing_summaries', locals: { results: @results }
-
 
 - if Rails.configuration.x.display_raw_responses
   = render partial: 'raw_response'
