Refactor the prosecution case "show" flow
There can only be one prosecution_case
per URN - we might want to consider raising
an error if there is ever more than one.

This PR therefore removes the need to iterate
over an array or results to retrieve the
prosectution_case object.

This removes alot of clutter and logic
from the views. It also moves the decoration
of the prosecution_case to the controller so
any views/partials do not need to decorate
individually.

--- a/app/views/prosecution_cases/_hearing_summaries.html.haml
+++ b/app/views/prosecution_cases/_hearing_summaries.html.haml
@@ -9,14 +9,12 @@
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.hearing_type')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.providers')
   %tbody.govuk-table__body
-    - results.each do |prosecution_case|
-      - decorate(prosecution_case) do |pc|
-        - pc.hearings_by_datetime.each do |hearing|
-          - hearing.hearing_days.map(&:to_date).sort.each do |hearing_day|
-            %tr.govuk-table__row
-              %td.govuk-table__cell
-                = link_to hearing_day.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, hearing_day: hearing_day.to_date.strftime('%d/%m/%Y'))
-              %td.govuk-table__cell
-                = hearing.hearing_type
-              %td.govuk-table__cell
-                = hearing ? decorate(hearing).provider_list : t('generic.not_available')
+    - prosecution_case.hearings_by_datetime.each do |hearing|
+      - hearing.hearing_days.map(&:to_date).sort.each do |hearing_day|
+        %tr.govuk-table__row
+          %td.govuk-table__cell
+            = link_to hearing_day.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, hearing_day: hearing_day.to_date.strftime('%d/%m/%Y')), class: 'govuk-link'
+          %td.govuk-table__cell
+            = hearing.hearing_type
+          %td.govuk-table__cell
+            = hearing ? decorate(hearing).provider_list : t('generic.not_available')
