--- a/app/views/prosecution_cases/_defendants.html.haml
+++ b/app/views/prosecution_cases/_defendants.html.haml
@@ -9,12 +9,11 @@
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.date_of_birth')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.defendant.maat_number')
   %tbody.govuk-table__body
-    - @results.each do |prosecution_case|
-      - prosecution_case.defendants.each do |defendant|
-        %tr.govuk-table__row
-          %td.govuk-table__cell
-            = link_to defendant.name, defendant_link_path(defendant, prosecution_case.prosecution_case_reference)
-          %td.govuk-table__cell
-            = l(defendant.date_of_birth&.to_date)
-          %td.govuk-table__cell
-            = defendant.maat_reference || t('search.result.defendant.unlinked')
+    - prosecution_case.defendants.each do |defendant|
+      %tr.govuk-table__row
+        %td.govuk-table__cell
+          = link_to defendant.name, defendant_link_path(defendant, prosecution_case.prosecution_case_reference), class: 'govuk-link'
+        %td.govuk-table__cell
+          = l(defendant.date_of_birth&.to_date)
+        %td.govuk-table__cell
+          = defendant.maat_reference || t('search.result.defendant.unlinked')
