--- a/app/views/hearings/_listing_info.html.haml
+++ b/app/views/hearings/_listing_info.html.haml
@@ -1,6 +1,6 @@
 %table.govuk-table
   %caption.govuk-table__caption.govuk-visually-hidden
-    = t('generic.hearing')
+    = t('generic.hearing_day')
   %tbody.govuk-table__body
     %tr.govuk-table__row
       %th.govuk-table__header{ scope: 'row' }
