[WIP] reset this and breakup

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -13,4 +13,5 @@ $govuk-image-url-function: frontend-image-url;
 
 @import "components/cookie_banner";
 @import "components/forms";
+@import "components/pagination";
 @import "components/summary";
