--- a/app/views/prosecution_cases/_hearing_summaries.html.haml
+++ b/app/views/prosecution_cases/_hearing_summaries.html.haml
@@ -9,12 +9,11 @@
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.hearing_type')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.providers')
   %tbody.govuk-table__body
-    - prosecution_case.hearings_by_datetime.each do |hearing|
-      - hearing.hearing_days.map(&:to_date).sort.each do |hearing_day|
-        %tr.govuk-table__row
-          %td.govuk-table__cell
-            = link_to hearing_day.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, hearing_day: hearing_day.to_date.strftime('%d/%m/%Y')), class: 'govuk-link'
-          %td.govuk-table__cell
-            = hearing.hearing_type
-          %td.govuk-table__cell
-            = hearing ? decorate(hearing).provider_list : t('generic.not_available')
+    - prosecution_case.hearings_with_day_by_datetime.each_with_index do |hearing, idx|
+      %tr.govuk-table__row
+        %td.govuk-table__cell
+          = link_to hearing.day.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, page: idx), class: 'govuk-link'
+        %td.govuk-table__cell
+          = hearing.hearing_type
+        %td.govuk-table__cell
+          = hearing ? hearing.provider_list : t('generic.not_available')
