--- a/app/views/prosecution_cases/_hearing_summaries.html.haml
+++ b/app/views/prosecution_cases/_hearing_summaries.html.haml
@@ -13,7 +13,12 @@
       - hearing.hearing_days.map(&:to_date).sort.each do |hearing_day|
         %tr.govuk-table__row
           %td.govuk-table__cell
-            = link_to hearing_day.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, hearing_day: hearing_day.to_date.strftime('%d/%m/%Y')), class: 'govuk-link'
+            - if hearing_day > Date.today
+              = hearing_day.to_date.strftime('%d/%m/%Y')
+              %br
+              = 'Scheduled'
+            - else
+              = link_to hearing_day.to_date.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, hearing_day: hearing_day.to_date.strftime('%d/%m/%Y')), class: 'govuk-link'
           %td.govuk-table__cell
             = hearing.hearing_type
           %td.govuk-table__cell
