Add missing govuk-link class to links without it
Noticed there were some missing links. I believe the
the devise mailers are not used to it should not matter
but have amended for completeness.

--- a/app/views/results/_defendant.html.haml
+++ b/app/views/results/_defendant.html.haml
@@ -12,9 +12,9 @@
     - @results.each do |defendant|
       %tr.govuk-table__row
         %td.govuk-table__cell
-          = link_to defendant.name, defendant_link_path(defendant, defendant.prosecution_case_reference)
+          = link_to defendant.name, defendant_link_path(defendant, defendant.prosecution_case_reference), class: 'govuk-link'
         %td.govuk-table__cell
-          = link_to defendant.prosecution_case_reference, prosecution_case_path(defendant.prosecution_case_reference)
+          = link_to defendant.prosecution_case_reference, prosecution_case_path(defendant.prosecution_case_reference), class: 'govuk-link'
         %td.govuk-table__cell
           = l(defendant.date_of_birth&.to_date)
         %td.govuk-table__cell
