--- a/app/views/results/_prosecution_case.html.haml
+++ b/app/views/results/_prosecution_case.html.haml
@@ -13,9 +13,9 @@
       - cse.defendants.each do |defendant|
         %tr.govuk-table__row
           %td.govuk-table__cell
-            = link_to defendant.name, defendant_link_path(defendant, cse.prosecution_case_reference)
+            = link_to defendant.name, defendant_link_path(defendant, cse.prosecution_case_reference), class: 'govuk-link'
           %td.govuk-table__cell
-            = link_to cse.prosecution_case_reference, prosecution_case_path(cse.prosecution_case_reference)
+            = link_to cse.prosecution_case_reference, prosecution_case_path(cse.prosecution_case_reference), class: 'govuk-link'
           %td.govuk-table__cell
             = l(defendant.date_of_birth&.to_date)
           %td.govuk-table__cell
