--- a/app/views/prosecution_cases/_hearing_summaries.html.haml
+++ b/app/views/prosecution_cases/_hearing_summaries.html.haml
@@ -5,14 +5,20 @@
     = t('search.result.hearing.caption')
   %thead.govuk-table__head
     %tr.govuk-table__row
-      %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.hearing_day')
+      %th.govuk-table__header{ scope: 'col' }
+        = t('search.result.hearing.hearing_day')
+        %br
+        = link_to("asc", :sort_order => "date_asc")
+        = link_to("desc", :sort_order => "date_desc")
+        -# = @sorter.desc_link
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.hearing_type')
       %th.govuk-table__header{ scope: 'col' }= t('search.result.hearing.providers')
   %tbody.govuk-table__body
-    - prosecution_case.hearings_with_day_by_datetime.each_with_index do |hearing, idx|
+    -# - prosecution_case.hearings_with_day_by_datetime.each_with_index do |hearing, idx|
+    - @hearing_sorter.hearings_with_day_by_datetime.each_with_index do |hearing, idx|
       %tr.govuk-table__row
         %td.govuk-table__cell
-          = link_to hearing.day.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, page: idx), class: 'govuk-link'
+          = link_to hearing.day.strftime('%d/%m/%Y'), hearing_path(id: hearing.id, urn: prosecution_case.prosecution_case_reference, page: idx, sort_order: @hearing_sorter.sort_order), class: 'govuk-link'
         %td.govuk-table__cell
           = hearing.hearing_type
         %td.govuk-table__cell
