Decorate hearing object in controller
Move backend logic out of view.

Also, Remove unrequired locals as these were
from a previous commit and mechanism which is
no longer required.

--- a/app/views/hearings/_pagination.html.haml
+++ b/app/views/hearings/_pagination.html.haml
@@ -2,9 +2,9 @@
   %p.govuk-visually-hidden{ 'aria-labelledby': 'pagination-label' }
     Pagination navigation
   %ul.moj-pagination__list
-    - unless @paginator.first_page?
+    - unless paginator.first_page?
       %li.moj-pagination__item.moj-pagination__item--prev
-        = @paginator.previous_page_link
-    - unless @paginator.last_page?
+        = paginator.previous_page_link
+    - unless paginator.last_page?
       %li.moj-pagination__item.moj-pagination__item--next
-        = @paginator.next_page_link
+        = paginator.next_page_link
