Add hearing paginator styling
Use @ministryofjustice/frontend/moj css

As requested by designer this it to make use
of the moj [pagination component](https://moj-design-system.herokuapp.com/components/pagination)
which is [defined in the moj-frontend repo](https://github.com/ministryofjustice/moj-frontend/blob/master/package/moj/components/pagination/_pagination.scss)

Notes:
  1. Import moj assets before core typography

  The import order is important should we wish
  to override styles coming from either govuk
  or moj design systems.

--- a/app/views/hearings/_pagination.html.haml
+++ b/app/views/hearings/_pagination.html.haml
@@ -1,7 +1,10 @@
-.govuk-grid-row{ style: 'margin-bottom: 10px'}
-  - unless @paginator.first_page?
-    .govuk-grid-column-one-half
-      = @paginator.previous_page_link
-  - unless @paginator.last_page?
-    .govuk-grid-column-one-half
-      = @paginator.next_page_link
+%nav#pagination-label.moj-pagination
+  %p.govuk-visually-hidden{ 'aria-labelledby': 'pagination-label' }
+    Pagination navigation
+  %ul.moj-pagination__list
+    - unless @paginator.first_page?
+      %li.moj-pagination__item.moj-pagination__item--prev
+        = @paginator.previous_page_link
+    - unless @paginator.last_page?
+      %li.moj-pagination__item.moj-pagination__item--next
+        = @paginator.next_page_link
