--- a/app/views/prosecution_cases/_cracked_ineffective_trial.html.haml
+++ b/app/views/prosecution_cases/_cracked_ineffective_trial.html.haml
@@ -9,6 +9,6 @@
         %td.govuk-table__cell
           - prosecution_case.hearings.each do |hearing|
             - if hearing.cracked_ineffective_trial&.cracked?
-              = hearing.cracked_ineffective_trial.cracked_on_sentence(hearing, prosecution_case)
+              = hearing.cracked_ineffective_trial.cracked_on_sentence(hearing)
               %br
               = hearing.cracked_ineffective_trial.description
