[CBO-1728] Add spacing overrides to heading and pagination
Add spacing to match the design reference of the page.

--- a/app/views/hearings/_pagination.html.haml
+++ b/app/views/hearings/_pagination.html.haml
@@ -1,4 +1,4 @@
-%nav#pagination-label.moj-pagination
+%nav#pagination-label.moj-pagination{ class: 'govuk-!-margin-bottom-8' }
   %p.govuk-visually-hidden{ 'aria-labelledby': 'pagination-label' }
     Pagination navigation
   %ul.moj-pagination__list
