--- a/app/views/laa_references/show.html.haml
+++ b/app/views/laa_references/show.html.haml
@@ -3,4 +3,4 @@
 - content_for :custom_packs do
   = javascript_pack_tag 'unlink', defer: true
 
-= render('defendants/form', locals: @defendant)
+= render('laa_references/unlink_form', locals: @defendant)
