Display event hearing notes
Tests are also added on hearing event notes to render unicode characters
correctly and escape HTML.

--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -12,3 +12,5 @@
           = event.occurred_at.to_datetime.strftime('%H:%M')
         %td.govuk-table__cell
           = event.description
+          %br
+          = event&.note
