Add extra padding between event hearing description and note

--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -12,5 +12,6 @@
           = event.occurred_at.to_datetime.strftime('%H:%M')
         %td.govuk-table__cell
           = event.description
-          %br
-          = event&.note
+          - if event&.note.present?
+            %div{ class: 'govuk-!-padding-top-1' }
+              = event&.note
