--- a/app/views/prosecution_cases/_raw_response.html.haml
+++ b/app/views/prosecution_cases/_raw_response.html.haml
@@ -25,14 +25,14 @@
       = JSON.pretty_generate(hearing.attributes)
 
     %h4="Hearing events for hearing #{hidx}"
-    = 'none' if hearing.hearing_events.empty?
-    - hearing.hearing_events.each.with_index do |event, eidx|
+    = 'none' if hearing.hearing_events.blank?
+    - Array(hearing.hearing_events).each.with_index do |event, eidx|
       %pre
         = JSON.pretty_generate(event.attributes)
 
     %h4="Providers for hearing #{hidx}"
-    = 'none' if hearing.providers.empty?
-    - hearing.providers.each.with_index do |event, pidx|
+    = 'none' if hearing.providers.blank?
+    - Array(hearing.providers).each.with_index do |event, pidx|
       %pre
         = JSON.pretty_generate(event.attributes)
 
