Add css to prevent notes from overflowing table row
Unbreakable strings whose character length is longer than the row would
spill out of the table. A class and styling is added specifically for
the event notes table row to prevent this and instead insert line breaks.

--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -10,5 +10,5 @@
       %tr.govuk-table__row
         %td.govuk-table__cell
           = event.occurred_at.to_datetime.strftime('%H:%M')
-        %td.govuk-table__cell
+        %td.govuk-table__cell.hearing-events-table__cell--overflow-wrap
           = event.description
