--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -14,5 +14,6 @@ $govuk-image-url-function: frontend-image-url;
 
 @import "components/cookie_banner";
 @import "components/forms";
+@import "components/hearing_events";
 @import "components/sortable_table";
 @import "components/summary";
