Add helper to display crlf and sanitize event notes
Notes containing html and crlf escape sequences were displayed raw, this
change renders crlf but removes all other html tags. The helper calls
simple_format() which converts crlf to html tags <br> and <p>. sanitize()
then sanitizes the string for unsafe elements, only <br> and <p> are
whitelisted, all other html are removed.

--- a/app/views/hearings/_hearing_events.html.haml
+++ b/app/views/hearings/_hearing_events.html.haml
@@ -12,3 +12,6 @@
           = event.occurred_at.to_datetime.strftime('%H:%M')
         %td.govuk-table__cell.hearing-events-table__cell--overflow-wrap
           = event.description
+          - if event&.note.present?
+            %div{ class: 'govuk-!-padding-top-1' }
+              = display_crlf_and_sanitize(event.note)
