Make changes suggested in pr comments
Add line break at end of view
Correct typo in spec
Remove court_application_parties from prosecution_case.rb
Add missing = to view

--- a/app/views/hearings/_court_applications.html.haml
+++ b/app/views/hearings/_court_applications.html.haml
@@ -45,7 +45,7 @@
                   - if result&.text.present?
                     = transform_and_sanitize(result&.text)
                   - else
-                    t('generic.not_available')
+                    = t('generic.not_available')
             %div.govuk-summary-list__row
               %dt.govuk-summary-list__key
                 = t('hearings.show.court_applications.respondent_synonyms')
