--- a/app/views/help/cookies.html.haml
+++ b/app/views/help/cookies.html.haml
@@ -15,10 +15,95 @@
   %li= t('cookies.section_two.list_item_two')
   %li= t('cookies.section_two.list_item_three')
 
+%p.govuk-body= t('cookies.section_two.paragraph_three')
+
+%table.govuk-table
+  %caption.govuk-table__caption.govuk-visually-hidden
+    = t('cookies.section_two.table.caption')
+  %thead.govuk-table__head
+    %tr.govuk-table__row
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_two.table.heading_one')
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_two.table.heading_two')
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_two.table.heading_three')
+  %tbody.govuk-table__body
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_one_a')
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_one_b')
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_one_c')
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_two_a')
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_two_b')
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_two_c')
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_three_a')
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_three_b')
+      %td.govuk-table__cell
+        = t('cookies.section_two.table.row_three_c')
+%p.govuk-body
+  %a.govuk-link{ :href => "cookie-settings" }= t('cookies.section_two.paragraph_four')
+
 %h2.govuk-heading-l= t('cookies.section_three.section_heading')
 
 %p.govuk-body= t('cookies.section_three.paragraph_one')
 
-%h2.govuk-heading-l= t('cookies.section_four.section_heading')
+%table.govuk-table
+  %caption.govuk-table__caption.govuk-visually-hidden
+    = t('cookies.section_three.table.caption')
+  %thead.govuk-table__head
+    %tr.govuk-table__row
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_three.table.heading_one')
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_three.table.heading_two')
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_three.table.heading_three')
+  %tbody.govuk-table__body
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_three.table.row_one_a')
+      %td.govuk-table__cell
+        = t('cookies.section_three.table.row_one_b')
+      %td.govuk-table__cell
+        = t('cookies.section_three.table.row_one_c')
+
+%h2.govuk-heading-l= t('cookies.section_three.section_heading')
 
 %p.govuk-body= t('cookies.section_four.paragraph_one')
+
+%table.govuk-table
+  %caption.govuk-table__caption.govuk-visually-hidden
+    = t('cookies.section_four.table.caption')
+  %thead.govuk-table__head
+    %tr.govuk-table__row
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_four.table.heading_one')
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_four.table.heading_two')
+      %th.govuk-table__header{:scope => "col"}
+        = t('cookies.section_four.table.heading_three')
+  %tbody.govuk-table__body
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_four.table.row_one_a')
+      %td.govuk-table__cell
+        = t('cookies.section_four.table.row_one_b')
+      %td.govuk-table__cell
+        = t('cookies.section_four.table.row_one_c')
+    %tr.govuk-table__row
+      %td.govuk-table__cell
+        = t('cookies.section_four.table.row_two_a')
+      %td.govuk-table__cell
+        = t('cookies.section_four.table.row_two_b')
+      %td.govuk-table__cell
+        = t('cookies.section_four.table.row_two_c')
