--- a/app/webpack/stylesheets/components/_custom_styles.scss
+++ b/app/webpack/stylesheets/components/_custom_styles.scss
@@ -1,3 +1,3 @@
-.vcd-capitalize-first-letter::first-letter {
-    text-transform: uppercase;
+.vcd-capitalize-first-letter:first-letter {
+  text-transform: uppercase;
 }
