Re-do the cookies path, add cookie controller and model

--- a/app/views/cookies/cookie_details.html.haml
+++ b/app/views/cookies/cookie_details.html.haml
@@ -109,4 +109,4 @@
 %h2.govuk-heading-l= t('cookies.section_adjust.section_heading')
 
 %p.govuk-body
-  = t('cookies.section_adjust.link_text_html', href: cookie_settings_path)
+  = t('cookies.section_adjust.link_text_html', href: cookies_settings_path)
