--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -22,5 +22,5 @@
             = key.capitalize
         .govuk-notification-banner__content
           %p.govuk-notification-banner__heading
-            = value
+            = value.html_safe
 
