--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -7,7 +7,7 @@
 
         %ul.govuk-footer__inline-list
           %li.govuk-footer__inline-list-item
-            = link_to t('layouts.application.footer.cookies'), cookies_path, class: 'govuk-footer__link'
+            = link_to t('layouts.application.footer.cookies'), cookies_settings_path, class: 'govuk-footer__link'
 
           %li.govuk-footer__inline-list-item
             = link_to t('layouts.application.footer.contact'), contact_us_path, class: 'govuk-footer__link'
