--- a/app/views/cookies/cookie_details.html.haml
+++ b/app/views/cookies/cookie_details.html.haml
@@ -56,7 +56,7 @@
         = t('cookies.section_functional.table.row_one_a')
       %td.govuk-table__cell
         = t('cookies.section_functional.table.row_one_b')
-      %td.govuk-table__cell
+      %td.govuk-table__cell.app-no-wrap
         = t('cookies.section_functional.table.row_one_c')
 
 %h2.govuk-heading-l= t('cookies.section_analytics.section_heading')
@@ -89,21 +89,21 @@
         = t('cookies.section_analytics.table.row_one_a')
       %td.govuk-table__cell
         = t('cookies.section_analytics.table.row_one_b')
-      %td.govuk-table__cell
+      %td.govuk-table__cell.app-no-wrap
         = t('cookies.section_analytics.table.row_one_c')
     %tr.govuk-table__row
       %td.govuk-table__cell
         = t('cookies.section_analytics.table.row_two_a')
       %td.govuk-table__cell
         = t('cookies.section_analytics.table.row_two_b')
-      %td.govuk-table__cell
+      %td.govuk-table__cell.app-no-wrap
         = t('cookies.section_analytics.table.row_two_c')
     %tr.govuk-table__row
       %td.govuk-table__cell
         = t('cookies.section_analytics.table.row_three_a')
       %td.govuk-table__cell
         = t('cookies.section_analytics.table.row_three_b')
-      %td.govuk-table__cell
+      %td.govuk-table__cell.app-no-wrap
         = t('cookies.section_analytics.table.row_three_c')
 
 %h2.govuk-heading-l= t('cookies.section_adjust.section_heading')
