Add code to remove google cookies if analytics rejected

--- a/app/views/layouts/_google_analytics.html.haml
+++ b/app/views/layouts/_google_analytics.html.haml
@@ -1,4 +1,4 @@
-- if @analytics_cookies_accepted == 'true'
+- if @analytics_cookies_accepted
   :javascript
     let googleTrackingID = "#{ENV['GA_TRACKING_ID']}"
 
